force-app/main/default/objects/OpportunityProductLineItem__c/OpportunityProductLineItem__c.object-meta.xml
<CustomObject>
    <label>商机产品</label>
    <nameField>
        <displayFormat>OPL-{000000}</displayFormat>
        <label>商机产品编号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>