force-app/main/default/objects/OpportunityProductLineItem__c/fields/ApplicationType__c.field-meta.xml
<CustomField>
    <fullName>ApplicationType__c</fullName>
    <label>应用</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>主推</fullName>
            </value>
            <value>
                <fullName>主发</fullName>
            </value>
            <value>
                <fullName>应急</fullName>
            </value>
            <value>
                <fullName>应急兼停泊</fullName>
            </value>
            <value>
                <fullName>其他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>