force-app/main/default/objects/OpportunityProductLineItem__c/fields/BoatCovers__c.field-meta.xml
<CustomField>
    <fullName>BoatCovers__c</fullName>
    <defaultValue>0</defaultValue>
    <label>船套</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>