force-app/main/default/objects/OpportunityProductLineItem__c/fields/BoatCoversQty__c.field-meta.xml
<CustomField>
    <fullName>BoatCoversQty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>每船套台数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>