force-app/main/default/objects/OpportunityProductLineItem__c/fields/ClassificationSociety__c.field-meta.xml
<CustomField>
    <fullName>ClassificationSociety__c</fullName>
    <label>船级社</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CCS</fullName>
            </value>
            <value>
                <fullName>BV</fullName>
            </value>
            <value>
                <fullName>BV+IMO2</fullName>
            </value>
            <value>
                <fullName>CCS/BV/ABS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>