force-app/main/default/objects/OpportunityProductLineItem__c/fields/CompeteProduct__c.field-meta.xml
<CustomField>
    <fullName>CompeteProduct__c</fullName>
    <label>竞品机型</label>
    <length>255</length>
    <type>Text</type>
</CustomField>