force-app/main/default/objects/OpportunityProductLineItem__c/fields/DesigningInstituteCondition__c.field-meta.xml
<CustomField>
    <fullName>DesigningInstituteCondition__c</fullName>
    <formula>IF( OpportunityName__r.DesigningInstitute__c  = null,  &#39;&#39; , OpportunityName__r.DesigningInstitute__r.Name + TEXT( Factory__c ) +  Product__r.Name)</formula>
    <label>设计院条件</label>
    <type>Text</type>
</CustomField>