force-app/main/default/objects/OpportunityProductLineItem__c/fields/OpportunityName__c.field-meta.xml
<CustomField>
    <fullName>OpportunityName__c</fullName>
    <label>项目名称</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>商机产品</relationshipLabel>
    <relationshipName>OpportunityProductmtpz</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>