force-app/main/default/objects/OpportunityProductLineItem__c/fields/Power__c.field-meta.xml
<CustomField>
    <fullName>Power__c</fullName>
    <defaultValue>0</defaultValue>
    <label>功率（KW）</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>