force-app/main/default/objects/OpportunityProductLineItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>型号</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>商机产品</relationshipLabel>
    <relationshipName>OpportunityProduct3XV0</relationshipName>
    <type>Lookup</type>
</CustomField>