force-app/main/default/objects/OpportunityProductLineItem__c/fields/ProjectNameConflictCondition__c.field-meta.xml
<CustomField>
    <fullName>ProjectNameConflictCondition__c</fullName>
    <formula>LEN( OpportunityName__c ) &gt;= 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>项目名称冲突条件</label>
    <type>Checkbox</type>
</CustomField>