force-app/main/default/objects/OpportunityProductLineItem__c/fields/ProjectNeedTechApprove__c.field-meta.xml
<CustomField>
    <fullName>ProjectNeedTechApprove__c</fullName>
    <defaultValue>false</defaultValue>
    <label>商机产品需要技术审核</label>
    <type>Checkbox</type>
</CustomField>