force-app/main/default/objects/OpportunityProductLineItem__c/fields/RequirementDate__c.field-meta.xml
<CustomField>
    <fullName>RequirementDate__c</fullName>
    <label>需求日期</label>
    <type>Date</type>
</CustomField>