force-app/main/default/objects/OpportunityProductLineItem__c/fields/RotationalSpeed__c.field-meta.xml
<CustomField>
    <fullName>RotationalSpeed__c</fullName>
    <label>转速（RPM）</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>