force-app/main/default/objects/OpportunityProductLineItem__c/fields/ShipyardCondition__c.field-meta.xml
<CustomField>
    <fullName>ShipyardCondition__c</fullName>
    <formula>IF( OpportunityName__r.Shipyard__c  = null, &#39;&#39;,  OpportunityName__r.Shipyard__r.Name + TEXT( Factory__c ) +  Product__r.Name )</formula>
    <label>船厂条件</label>
    <type>Text</type>
</CustomField>