force-app/main/default/objects/OpportunityProductLineItem__c/fields/TotalQty__c.field-meta.xml
<CustomField>
    <fullName>TotalQty__c</fullName>
    <formula>BoatCovers__c * BoatCoversQty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>总台数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>